[package]
name = "ColdTDDB"
version = "0.1.0"
authors = ["EthanSk13s <ethanmiranda11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2", features = ["image", "debug", "tokio_old"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
regex = "1"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["fs"]}

[dependencies.sqlx]
version = "0.4.2"
features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"]

[dependencies.rusqlite]
version = "0.24.1"
features = ["bundled"]